<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_face"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        app:constraint_referenced_ids="tv_caller_name, tv_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_business_center"
        android:drawablePadding="6dp"
        android:text="@string/call_intent_text"
        app:layout_constraintStart_toEndOf="@+id/img_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_caller_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#444444"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_intent"
        app:layout_constraintTop_toBottomOf="@+id/tv_intent" />

    <TextView
        android:id="@+id/btn_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableTop="@drawable/ic_reply"
        android:text="@string/decline_amp_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/btn_reminder"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <TextView
        android:id="@+id/btn_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_reminder"
        android:text="@string/remind_later"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/btn_decline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_reply"
        app:layout_constraintTop_toTopOf="@+id/btn_reply" />

    <ImageView
        android:id="@+id/btn_decline"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/red_bg"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_call_end"
        app:layout_constraintEnd_toStartOf="@+id/btn_answer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_reminder"
        app:layout_constraintTop_toTopOf="@+id/btn_reply" />

    <ImageView
        android:id="@+id/btn_answer"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/green_bg"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_decline"
        app:layout_constraintTop_toTopOf="@+id/btn_reply" />

</androidx.constraintlayout.widget.ConstraintLayout>